--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -4,7 +4,7 @@
     position: relative;
 
     .view-content ul
-   {
+    {
        list-style:none;
        margin:30px 0 0 0;
        padding:0;
@@ -16,9 +16,9 @@
            cursor:pointer;
            line-height:64px;
            text-transform:uppercase;
-           padding:0 20px;
            margin: 0 20px;
            font-size:1.8em;
+           font-weight: bold;
 
            &.active
            {
@@ -33,9 +33,17 @@
        position: absolute;
        bottom: 0;
        left: 50%;
-       width:160px;
-       margin-left: -80px;
+       width:150px;
+       margin-left: -75px;
        border-bottom:2px solid $green;
+   }
+   
+   .focusable
+   {
+       outline-color: $green;
+       outline-offset: -3px;
+       outline-width: thin;
+       padding:0 20px;
    }
 }
 
@@ -43,28 +51,49 @@
 {
     margin-top:20px;
     position: relative;
-    height: 260px;
+    height: 220px;
 
     .views-row
     {
         opacity:0;
-        column-count:2;
-        -webkit-column-count:2;
-        -moz-column-count:2;
-        column-gap:25px;
-        -webkit-column-gap:25px;
-        -moz-column-gap:25px;
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height:260px;
-
-        .views-field-title
+        right: 0;
+        height:220px;
+        
+        &.views-row-last
         {
-            position: absolute;
-            left: -9999px;
+            -webkit-column-count: 2;
+            column-count: 2;
+            -webkit-column-gap: 25px;
+            column-gap: 25px;
+            
+            .views-field-body
+            {
+                max-width: none;
+                font-size: 1.2em;
+                font-weight: 400;
+                padding-top: 0;
+            }
         }
+    }
+    .views-field-title
+    {
+        position: absolute;
+        left: -9999px;
+    }
+    .views-field-body
+    {
+        font-size: 1.6em;
+        font-weight: bold;
+        font-style: italic;
+        text-align: center;
+        line-height: 1;
+        text-transform: uppercase;
+        max-width: 520px;
+        margin: 0 auto;
+        padding-top: 40px;
     }
 }
 
