--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -36,9 +36,24 @@ hr
 {
     overflow: hidden;
 }
-#main-wrapper
+
+body.menu-green
 {
-    padding-top: 51px;
+    #top
+    {
+        background: #106232;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.22);
+        
+        #logo
+        {
+            padding-top: 7px;
+            
+            img
+            {
+                height: 36px;
+            }
+        }
+    }
 }
 
 #top
@@ -49,22 +64,23 @@ hr
     right: 0;
     z-index: 100;
     height: 51px;
-    background: #106232;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.22);
+    transition: all 0.4s;
 
     #logo
     {
         display: block;
-        padding-top: 7px;
+        padding-top: 12px;
         padding-left: 40px;
         float: left;
         z-index: 101;
+        transition: all 0.4s;
         
         img
         {
             display: block;
-            height: 36px;
+            height: 51px;
             width: auto;
+            transition: all 0.4s;
         }
     }
     
@@ -72,13 +88,13 @@ hr
     {
         float: right;
         display: block;
-        height: 51px;
-        line-height: 51px;
         width: 51px;
         text-align: center;
         position: relative;
         z-index: 101;
         outline: none;
+        height: 51px;
+        line-height: 51px;
         
         &:active
         {
@@ -87,7 +103,8 @@ hr
         
         img
         {
-            vertical-align: middle;
+            vertical-align: top;
+            margin-top: 15px;
             display: inline-block;
             width: 28px;
             height: 20px;
@@ -658,10 +675,15 @@ body.start-a-project
             font-weight: bold;
             margin-bottom: 28px;
             
-            &:active
+            &:hover
             {
                 background-color: $green;
                 color: white;
+            }
+            &:active
+            {
+                background-color: white;
+                color: $green;
             }
         }
         
