--- a/sites/all/themes/cci/css/_kerning.css
+++ b/sites/all/themes/cci/css/_kerning.css
@@ -2,3 +2,7 @@
 {
     -letter-kern: -letter-pairs('VA': -3px);
 }
+.front .block.home-header .content div
+{
+    -letter-kern: -letter-pairs('We':-4px, "e'":-3px, "'r":-2px);
+}
