--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -13,6 +13,11 @@ a
 p
 {
     margin-bottom:0.75em;
+    
+    &:last-child
+    {
+        margin-bottom: 0;
+    }
 }
 
 ul, ol
@@ -674,6 +679,7 @@ body.start-a-project
             border: 3px solid $green;
             font-weight: bold;
             margin-bottom: 28px;
+            font-size: 18px;
             
             &:hover
             {
