--- a/sites/all/themes/cci/sass/_mixins.scss
+++ b/sites/all/themes/cci/sass/_mixins.scss
@@ -7,3 +7,12 @@
     -webkit-column-gap:25px;
     -moz-column-gap:25px;
 }
+
+@mixin width
+{
+    max-width: 940px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
