--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -748,8 +748,9 @@ body.start-a-project
             
             h2
             {
-                text-transform: uppercase;
-                margin-bottom: 0.5em;
+                color: white;
+                margin-bottom: 0;
+                text-align: center;
             }
         }
     }
