--- a/sites/all/themes/cci/sass/_front.scss
+++ b/sites/all/themes/cci/sass/_front.scss
@@ -194,6 +194,8 @@
             margin: 0 auto;
             padding: 50px 30px;
             line-height: 1.2;
+            position: relative;
+            z-index: 1;
             
             h2
             {
@@ -216,6 +218,7 @@
                 padding-top: 140px;
                 background-repeat: no-repeat;
                 background-position: center top;
+                position: relative;
                 
                 .num
                 {
@@ -227,6 +230,21 @@
                     font-size: 1.8em;
                     line-height: 1;
                 }
+                &:after
+                {
+                    content: "";
+                    position: absolute;
+                    left: 60px;
+                    top: 60px;
+                    border-radius: 130px;
+                    width: 0;
+                    height: 0;
+                    background: $green;
+                    transition: all 0.4s ease-in-out;
+                    margin-left: 0;
+                    margin-top: 0;
+                    z-index: -1;
+                }
             }
             .step-1
             {
@@ -235,15 +253,30 @@
             .step-2
             {
                 background-image: url(../images/step-design.png);
+                
+                &:after
+                {
+                    transition-delay: 0.6s;
+                }
             }
             .step-3
             {
                 background-image: url(../images/step-develop.png);
+                
+                &:after
+                {
+                    transition-delay: 1.2s;
+                }
             }
             .step-4
             {
                 background-image: url(../images/step-launch.png);
                 margin-right: 0;
+                
+                &:after
+                {
+                    transition-delay: 1.8s;
+                }
             }
             
             a.more
@@ -267,6 +300,108 @@
                 {
                     background: none;
                 }
+            }
+        }
+        &.green .content .step:after
+        {
+            width: 130px;
+            height: 130px;
+            margin-left: -65px;
+            margin-top: -65px;
+        }
+    }
+    
+    .block.home-work
+    {
+        overflow: hidden;
+        max-width: 1800px;
+        margin: 0 auto;
+        
+        h2
+        {
+            line-height: 88px;
+            text-transform: uppercase;
+            font-weight: bold;
+            text-align: center;
+            font-size: 2.4em;
+        }
+        
+        .views-row
+        {
+            float: left;
+            position: relative;
+            width: 33.2%;
+            margin-right: 0.2%;
+            margin-bottom: 0.2%;
+            overflow: hidden;
+            line-height: 1;
+            
+            &.views-row-3,
+            &.views-row-6
+            {
+                margin-right: 0;
+            }
+            
+            &:hover
+            {
+                .hover
+                {
+                    display: block;
+                }
+                .views-field-field-image img
+                {
+                    -webkit-filter: blur(3px);
+                    -moz-filter: blur(3px);
+                    filter: blur(3px);
+                }
+            }
+        }
+        .views-field-field-image img
+        {
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+        .hover
+        {
+            display: none;
+            color: white;
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            text-align: center;
+            text-decoration: none;
+            background: rgba(16,98,50, 0.6);
+            padding: 10%;
+        }
+        .title
+        {
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 2.4em;
+            line-height: 0.8;
+            padding-bottom: 0.5em;
+        }
+        .description
+        {
+            font-weight: 500;
+        }
+        .more
+        {
+            display: inline-block;
+            border: 3px solid white;
+            text-transform: uppercase;
+            width: 100%;
+            max-width: 194px;
+            margin-top: 1.5em;
+            line-height: 45px;
+            font-weight: bold;
+            
+            &:hover
+            {
+                background: $green;
             }
         }
     }
