Style the sample logo separate from the sample thumb

--- a/sites/all/themes/cci/sass/_front.scss
+++ b/sites/all/themes/cci/sass/_front.scss
@@ -314,8 +314,6 @@
     .block.home-work
     {
         overflow: hidden;
-        max-width: 1800px;
-        margin: 0 auto;
         
         h2
         {
@@ -354,6 +352,10 @@
                     -moz-filter: blur(3px);
                     filter: blur(3px);
                 }
+                .views-field-field-logo
+                {
+                    display: none;
+                }
             }
         }
         .views-field-field-image img
@@ -361,6 +363,21 @@
             display: block;
             width: 100%;
             height: auto;
+        }
+        .views-field-field-logo
+        {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            
+            img
+            {
+                display: block;
+                width: 100%;
+                height: auto;
+            }
         }
         .hover
         {
