Replace all icon pngs with svgs

--- a/sites/all/themes/cci/sass/_front.scss
+++ b/sites/all/themes/cci/sass/_front.scss
@@ -173,7 +173,7 @@
             padding-top: 65px;
             padding-bottom: 10px;
             text-transform: uppercase;
-            background: url(../images/icon-quote.png) no-repeat center top;
+            background: url(../images/icon-quote.svg) no-repeat center top;
         }
         .views-field-title
         {
