--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -146,7 +146,7 @@ body.menu-green
                 display: block;
                 text-decoration:none;
                 color: white;
-                padding:0 10px 0 80px;
+                padding:0 10px 0 25px;
                 text-transform:uppercase;
                 height: 60px;
                 line-height: 60px;
@@ -162,29 +162,41 @@ body.menu-green
                     background-color: #0e572c;
                 }
                 
-                &.home
+                &:before
                 {
-                    background-image: url(../images/icon-menu-home.png);
+                    content: "";
+                    display: inline-block;
+                    width: 40px;
+                    height: 60px;
+                    vertical-align: top;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    margin-right: 15px;
                 }
-                &.culture
+                
+                &.home:before
                 {
-                    background-image: url(../images/icon-menu-culture.png);
+                    background-image: url(../images/icon-menu-home.svg);
                 }
-                &.services
+                &.culture:before
                 {
-                    background-image: url(../images/icon-menu-services.png);
+                    background-image: url(../images/icon-menu-culture.svg);
                 }
-                &.work
+                &.services:before
                 {
-                    background-image: url(../images/icon-menu-work.png);
+                    background-image: url(../images/icon-menu-services.svg);
                 }
-                &.contact
+                &.work:before
                 {
-                    background-image: url(../images/icon-menu-contact.png);
+                    background-image: url(../images/icon-menu-work.svg);
                 }
-                &.good-times
+                &.contact:before
                 {
-                    background-image: url(../images/icon-menu-good-times.png);
+                    background-image: url(../images/icon-menu-contact.svg);
+                }
+                &.good-times:before
+                {
+                    background-image: url(../images/icon-menu-good-times.svg);
                 }
             }
         }
@@ -238,15 +250,15 @@ body.menu-green
 
                     &.tw
                     {
-                        background-image:url(../images/tw-white.png);
+                        background-image:url(../images/icon-menu-tw.svg);
                     }
                     &.fb
                     {
-                        background-image:url(../images/fb-white.png);
+                        background-image:url(../images/icon-menu-fb.svg);
                     }
                     &.ig
                     {
-                        background-image:url(../images/ig-white.png);
+                        background-image:url(../images/icon-menu-ig.svg);
                     }
                 }
             }
@@ -282,14 +294,26 @@ body.menu-green
         box-shadow: 0 2px 5px rgba(0,0,0,0.22);
         margin-bottom: 75px;
         
-        &:after
+        &:before
         {
             content:"";
             display: block;
             position: absolute;
             width: 123px;
             height: 97px;
-            background: url(../images/good-times.png) no-repeat;
+            background: url(../images/good-times-outline.png) no-repeat;
+            right: 15%;
+            top: 0;
+        }
+        
+        &:after
+        {
+            content:"";
+            display: block;
+            position: absolute;
+            width: 123px;
+            height: 88px;
+            background: url(../images/good-times.svg) no-repeat center center;
             right: 15%;
             top: 0;
         }
@@ -728,15 +752,15 @@ body.start-a-project
         }
         .address
         {
-            background-image: url(../images/icon-address.png);
+            background-image: url(../images/icon-address.svg);
         }
         .email
         {
-            background-image: url(../images/icon-email.png);
+            background-image: url(../images/icon-email.svg);
         }
         .phone
         {
-            background-image: url(../images/icon-phone.png);
+            background-image: url(../images/icon-phone.svg);
         }
         
         .gmap
@@ -773,7 +797,7 @@ body.start-a-project
     {
         text-transform: uppercase;
         padding-top: 75px;
-        background: url(../images/icon-instagram.png) no-repeat center 25px;
+        background: url(../images/icon-ig.svg) no-repeat center 25px;
     }
     .hashtag
     {
@@ -820,7 +844,7 @@ body.start-a-project
     {
         text-transform: uppercase;
         padding-top: 75px;
-        background: url(../images/icon-twitter.png) no-repeat center 25px;
+        background: url(../images/icon-tw.svg) no-repeat center 25px;
     }
     .name
     {
@@ -898,7 +922,7 @@ body.start-a-project
         text-transform: uppercase;
         padding-top: 75px;
         margin-bottom: 6px;
-        background: url(../images/icon-spotify.png) no-repeat center 25px;
+        background: url(../images/icon-spotify.svg) no-repeat center 23px;
     }
     .label
     {
