--- a/sites/all/themes/cci/sass/_front.scss
+++ b/sites/all/themes/cci/sass/_front.scss
@@ -66,7 +66,7 @@
         width: 60px;
         height: 30px;
         margin-left: -30px;
-        background: url(../images/home-arrow-down.png) no-repeat center center;
+        background: url(../images/home-arrow-down.svg) no-repeat center center;
         cursor: pointer;
     }
     
