--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -968,3 +968,251 @@ body.start-a-project
         float: left;
     }
 }
+
+body.services .block.home-what-we-do
+{    
+    .content
+    {
+        text-align: center;
+        color: $green;
+        max-width: 940px;
+        padding: 50px 30px 10px 30px;
+        margin: 0 auto;
+        font-size: 18px;
+        line-height: 1.2;
+        
+        h2
+        {
+            font-weight: bold;
+            font-size: 2.4em;
+            text-transform: uppercase;
+            margin-bottom: 10px;
+        }
+        
+        p
+        {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        
+        ul
+        {
+            list-style: none;
+            margin: 10px 0 0 0;
+            padding: 0;
+        }
+        li
+        {
+            width: 16%;
+            margin: 0 5%;
+            padding: 16px 0 16px 64px;
+            display: inline-block;
+            font-weight: bold;
+            font-size: 24px;
+            text-align: left;
+            line-height: 1;
+            background-repeat: no-repeat;
+            background-position: left center;
+        }
+        .brand
+        {
+            background-image: url(../images/icon-services-brand-green.svg);
+        }
+        .web
+        {
+            background-image: url(../images/icon-services-web-green.svg);
+        }
+        .design
+        {
+            background-image: url(../images/icon-services-design-green.svg);
+        }
+        .social
+        {
+            background-image: url(../images/icon-services-social-green.svg);
+        }
+        .promo
+        {
+            background-image: url(../images/icon-services-promo-green.svg);
+        }
+        .mobile
+        {
+            background-image: url(../images/icon-services-mobile-green.svg);
+        }
+        .a11y
+        {
+            background-image: url(../images/icon-services-a11y-green.svg);
+        }
+        .interface
+        {
+            background-image: url(../images/icon-services-interface-green.svg);
+        }
+        .campaign
+        {
+            background-image: url(../images/icon-services-campaign-green.svg);
+        }
+    }
+}
+
+.block.services-how-we-do-it
+{
+    background: url(../images/bg-whiteboard.jpg) top center;
+    background-size: cover;
+    padding: 50px 30px;
+    
+    .content
+    {
+        text-align: center;
+        width: 100%;
+        max-width: 700px;
+        margin: 0 auto;
+        color: white;
+        line-height: 1;
+        font-size: 18px;
+        position: relative;
+        z-index: 1;
+        
+        h2
+        {
+            text-transform: uppercase;
+            font-size: 2.4em;
+            padding-bottom: 0.3em;
+        }
+    }
+    
+    .step
+    {
+        padding: 20px 20px 20px 175px;
+        text-align: left;
+        background-repeat: no-repeat;
+        background-position: top left;
+        min-height: 100px;
+        margin-bottom: 50px;
+        background-size: 140px 140px;
+        position: relative;
+        
+        &:before
+        {
+            content: "";
+            position: absolute;
+            left: 70px;
+            top: 70px;
+            border-radius: 160px;
+            width: 0;
+            height: 0;
+            background: $green;
+            transition: all 0.4s ease-in-out;
+            margin-left: 0;
+            margin-top: 0;
+            z-index: -1;
+        }
+        
+        .num
+        {
+            text-transform: uppercase;
+            font-size: 0.8em;
+            font-weight: bold;
+        }
+        .name
+        {
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 1.25em;
+            padding-bottom: 8px;
+        }
+        .description
+        {
+            font-size: 0.95em;
+            line-height: 1.1;
+        }
+    }
+    &.green .step:before
+    {
+        width: 152px;
+        height: 152px;
+        margin-left: -76px;
+        margin-top: -76px;
+    }
+    &.green .step:after
+    {
+        height: 199px;
+        bottom: -199px;
+    }
+    
+    .step1,
+    .step3
+    {
+        &:after
+        {
+            content: "";
+            position: absolute;
+            right: -120px;
+            bottom: 0;
+            width: 88px;
+            height: 0;
+            margin-bottom: 50px;
+            background: url(../images/step-arrow-1.png) no-repeat left top;
+            transition: all 0.4s ease-in-out;
+        }
+    }
+    .step2:after
+    {
+        content: "";
+        position: absolute;
+        left: -120px;
+        bottom: 0;
+        width: 88px;
+        height: 0;
+        margin-bottom: 50px;
+        background: url(../images/step-arrow-2.png) no-repeat left top;
+        transition: all 0.4s ease-in-out;
+    }
+    
+    .step1
+    {
+        background-image: url(../images/step-plan.png);
+        margin-top: 30px;
+        
+        &:after
+        {
+            transition-delay: 0.8s;
+        }
+    }
+    .step2
+    {
+        background-image: url(../images/step-design.png);
+        
+        &:before
+        {
+            transition-delay: 1.1s;
+        }
+        &:after
+        {
+            transition-delay: 1.8s
+        }
+    }
+    .step3
+    {
+        background-image: url(../images/step-develop.png);
+        
+        &:before
+        {
+            transition-delay: 2.1s;
+        }
+        &:after
+        {
+            transition-delay: 2.8s;
+        }
+    }
+    .step4
+    {
+        background-image: url(../images/step-launch.png);
+        margin-bottom: 0;
+        
+        &:before
+        {
+            transition-delay: 3.1s;
+        }
+    }
+    
+    
+}
