--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -837,3 +837,28 @@
         padding-left:200px;
     }
 }
+
+.view-quotes
+{
+    padding: 60px 30px;
+    max-width: 700px;
+    margin: 0 auto;
+    color: $green;
+    text-align: center;
+    
+    .views-field-body
+    {
+        font-weight: bold;
+        font-style: italic;
+        font-size: 24px;
+        line-height: 1.2;
+        padding-top: 65px;
+        padding-bottom: 10px;
+        text-transform: uppercase;
+        background: url(../images/icon-quote.svg) no-repeat center top;
+    }
+    .views-field-title
+    {
+        font-size: 20px;
+    }
+}
